CookiePopup fixed to be more visible and have some animations

--- a/my-scandi-shop/src/component/CookiePopup/CookiePopup.style.scss
+++ b/my-scandi-shop/src/component/CookiePopup/CookiePopup.style.scss
@@ -9,8 +9,8 @@
  * @link https://github.com/scandipwa/scandipwa
  */
 
- .CookiePopup {
-    --cookie-popup-bottom-margin: 100px;
+.CookiePopup {
+    --cookie-popup-bottom-margin: 50px;
 
     background-color: black;
     position: fixed;
@@ -18,13 +18,25 @@
     display: flex;
     opacity: 0.9;
     align-items: center;
-    width: fit-content;
+    justify-content: center;
     z-index: 200;
+    min-height: 120px;
+    border: 1px;
+    border-radius: 30px;
+    transform: translateX(-50%);
+    box-shadow: 5px solid black;
+    animation: slideUp 0.5s ease-out;
+    width: calc(100% - 32px);
+    max-width: 600px;
+    inset-inline: 50%;
+    padding: 12px 16px;
 
     @include desktop {
+        width: 50vw;
+        max-width: 600px;
         inset-inline-start: 50%;
         transform: translateX(-50%);
-        padding: 5px 10px;
+        padding: 16px 24px;
 
         &:dir(rtl) {
             transform: translateX(50%);
@@ -35,37 +47,40 @@
         inset-block-end: calc(var(--footer-total-height) + var(--cookie-popup-bottom-margin));
         flex-direction: column;
         width: calc(100% - 32px);
-        margin-inline: 16px;
-        padding: 8px 16px;
+        margin-inline: auto;
+        padding: 16px;
     }
 
     &-Content {
         color: white;
-        font-size: 12px;
+        font-size: 16px;
         font-weight: 700;
-        margin-block-end: 0;
+        margin-block-end: 8px;
         text-align: center;
+        line-height: 1.5;
 
         &::after {
-            content: '.';
+            content: ".";
             color: var(--color-white);
         }
     }
 
     &-Link {
-        font-size: 12px;
+        font-size: 14px;
     }
 
     &-CTA {
         color: var(--primary-base-color);
         text-transform: uppercase;
         font-weight: 700;
-        font-size: 14px;
+        font-size: 18px;
         cursor: pointer;
         white-space: nowrap;
+        border-bottom: 1px solid var(--primary-base-color);
+        padding: 3px;
 
         @include desktop {
-            margin-inline-start: 41px;
+            margin-inline-start: 100px;
         }
 
         @include mobile {
@@ -78,3 +93,12 @@
     }
 }
 
+@keyframes slideUp {
+    from {
+        transform: translateX(-50%) translateY(100%);
+    }
+
+    to {
+        transform: translateX(-50%) translateY(0);
+    }
+}
